docs/api/qiskit/0.29/qiskit.transpiler.passes.Width.md
---
title: Width
description: API reference for qiskit.transpiler.passes.Width
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Width
---

# Width

<span id="qiskit.transpiler.passes.Width" />

`Width(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/transpiler/passes/analysis/width.py "view source code")

Bases: `qiskit.transpiler.basepasses.AnalysisPass`

Calculate the width of a DAG circuit.

The result is saved in `property_set['width']` as an integer that contains the number of qubits + the number of clbits.

## Methods

### name

<span id="qiskit.transpiler.passes.Width.name" />

`Width.name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.Width.run" />

`Width.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/transpiler/passes/analysis/width.py "view source code")

Run the Width pass on dag.

## Attributes

<span id="qiskit.transpiler.passes.Width.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.Width.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

